--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="row">
 
         <div class="col-lg-6" >
-            <div class="happy-valentines"  style="transform: translate(86px, 10px);">
+            <div class="happy-valentines" >
                 <div class="valentines-day-card">
                   <div class="clouds"></div>
                   <div class="hearts">
